# OSPLab5

./: CMakeLists.txt  Makefile  client.c  client.h  info.h  p1_1_client.c  p1_1_server.c  p1_2_client.c  p1_2_server.c  p1_3_client.c  p1_3_server.c  p2_4.c  p2_5.c  p2_6.c  p2_7.c  p3_10.c  p3_10.pl  p3_89_server.pl  p3_8_client.c  p3_8_client.pl  p3_8_server.c  p3_8_server.pl  p3_9_server.c  server.c  server.h
