cmake_minimum_required(VERSION 3.10)
project(lab5 C)

set(CMAKE_C_STANDARD 99)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(p1_1_server p1_1_server.c info.h server.c server.h)
add_executable(p1_1_client info.h server.c server.h p1_1_client.c client.c client.h)
add_executable(p1_2_server p1_2_server.c info.h server.c server.h)
add_executable(p1_2_client info.h server.c server.h  p1_2_client.c client.c client.h)
add_executable(p1_3_server p1_3_server.c info.h server.c server.h)
add_executable(p1_3_client info.h server.c server.h  p1_3_client.c client.c client.h)
add_executable(p2_4 p2_4.c)
target_link_libraries (p2_4 Threads::Threads)
add_executable(p2_5 p2_5.c info.h)
target_link_libraries (p2_5 Threads::Threads)
add_executable(p2_6 p2_6.c)
target_link_libraries (p2_6 Threads::Threads)
add_executable(p2_7 p2_7.c)
target_link_libraries (p2_7 Threads::Threads)
add_executable(p3_8_server p3_8_server.c info.h server.c server.h)
add_executable(p3_8_client info.h server.c server.h  p3_8_client.c client.c client.h)
add_executable(p3_9_server p3_9_server.c info.h server.c server.h)
add_executable(p3_9_client info.h server.c server.h  p3_9_client.c client.c client.h)
add_executable(p3_10 p3_10.c)